ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Types/parserTypeQuery4/input.ts.stderr
error: Expected an identifier
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Types/parserTypeQuery4/input.ts:1:17
  |
1 | var v: typeof A.;
  |                 ^

